# Objetos

./: CMakeLists.txt  camera.c  camera.h  display.c  display.h  geometry.c  geometry.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  render.c  render.h  transform.c  transform.h  triangle.c  triangle.h  vector.c  vector.h
